<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book</string>
    <string name="menu_settings">Settings</string>
    
    <string name="name_hint">Contact Name</string>
    <string name="phone_hint">Contact Phone</string>
    <string name="email_hint">Contact Email</string>
    <string name="street_hint">Street</string>
    <string name="city_hint">City, State, Zip</string>
    <string name="address_label">Address</string>
    <string name="save">Save Contact</string>
    
    <string name="label_name">Name</string>
    <string name="label_phone">Phone</string>
    <string name="label_email">Email</string>
    <string name="label_street">Street</string>
    <string name="label_city">City, State, Zip</string>
    
    
    <string name="menuitem_add_contact">Add Contact</string>
    <string name="menuitem_edit_contact">Edit Contact</string>
    <string name="menuitem_delete_contact">Delete Contact</string>
    <string name="menuitem_add_contact_condensed">Add</string>
    <string name="menuitem_edit_contact_condensed">Edit</string>
    <string name="menuitem_delete_contact_condensed">Delete</string>
    
    <string name="confirm_title">Delete Contact</string>
    <string name="confirm_message">Are you sure you wish to delete this contact?</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    
    <string name="error_title">Invalid Contact</string>
    <string name="error_message">Please enter a name for your contact before saving it.</string>
    <string name="error_button">OK</string>
    
</resources>