<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/nameEditText"
            style="@style/ContactEditTextView"
            android:inputType="textPersonName"
            android:hint="@string/name_hint"
            android:imeOptions="actionNext">
            <requestFocus />
        </EditText>
        <EditText
            android:id="@+id/phoneEditText"
            style="@style/ContactEditTextView"
            android:inputType="phone"
            android:hint="@string/phone_hint"
            android:imeOptions="actionNext">
        </EditText>
        <EditText
            android:id="@+id/emailEditText"
            style="@style/ContactEditTextView"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext">
        </EditText>

        <TextView
            android:id="@+id/textView1"
            style="@style/ContactEditTextView"
            android:text="@string/address_label"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2.5dp"
            android:textSize="16sp" />
        
        <EditText
            android:id="@+id/streetEditText"
            style="@style/ContactEditTextView"
            android:inputType="text"
            android:hint="@string/street_hint"
            android:imeOptions="actionNext">
        </EditText>
        <EditText
            android:id="@+id/cityEditText"
            style="@style/ContactEditTextView"
            android:inputType="text"
            android:hint="@string/city_hint"            
            android:imeOptions="actionDone">
        </EditText>

        <Button
            android:id="@+id/saveContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/save" />

    </LinearLayout>
    

</ScrollView>